--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ChatApp</title>
     <script src="back.js"></script>
 </head>
 <body>
@@ -12,19 +12,22 @@
     <input type="text" name="" id="i1">
     <button onclick="handleClick1()">Send</button> -->
     <br>
-    <button onclick="handleCreate()">Create</button>
-    <input type="text" name="" id="answer">
-    <button onclick="handleAnswer()">Send Answer</button>
-    <br><br>
-    <input type="text" name="" id="join">
-    <button onclick="handleJoin()">Join</button>
-    <br><br>
-    <input type="text" id="msg1">
-    <button onclick="handleSend1()">Send 1</button>
-    <br><br>
-    <input type="text" id="msg2">
-    <button onclick="handleSend2()">Send 2</button>
-    <div id="texts"></div>
+    <div id="container">
+        <h1 id="connectionStatus"></h1>
+        <button onclick="handleCreate()" id="createButton">Create</button>
+        <input type="text" name="" id="answer">
+        <button onclick="handleAnswer()" id="sendAnswerButton">Send Answer</button>
+        <br id="br-hide"><br id="br-hide">
+        <input type="text" name="" id="join">
+        <button onclick="handleJoin()" id="joinButton">Join</button>
+        <br><br>
+        <input type="text" id="msg1">
+        <button onclick="handleSend1()" id="msgSend1">Send 1</button>
+        <br><br>
+        <input type="text" id="msg2">
+        <button onclick="handleSend2()" id="msgSend2">Send 2</button>
+        <div id="texts"></div>
+    </div>
     
 </body>
 </html>
