The stream doesnt break when the camera is turned on/off. Updated Readme

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centered Layout</title>
+    <title>Video Calling App</title>
     <link rel="stylesheet" href="styles.css">
     <script src="server.js"></script>
 </head>
